--- a/about.html
+++ b/about.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Us – Vincent Buchan Bookkeeping</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <header>
+    <nav>
+      <div>
+        <img src="assets/logo.png" alt="Vincent Buchan Bookkeeping" class="logo"/>
+      </div>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h1>About Vincent Buchan Bookkeeping</h1>
+      <p>Vincent Buchan Bookkeeping was founded with the goal of providing small businesses with dependable, detail-oriented bookkeeping services. With experience in finance and a personal touch, we work closely with each client to support their unique financial needs.</p>
+    </section>
+
+    <section>
+      <h2>Meet Deidre Buchan</h2>
+      <p>Deidre is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Contact us at <a href="mailto:Deidre.Buchan@gmail.com">Deidre.Buchan@gmail.com</a></p>
+    <p>Vincent Buchan Bookkeeping &copy; 2025</p>
+  </footer>
+
+</body>
+</html>
 
