--- a/index.html
+++ b/index.html
@@ -1,6 +1,46 @@
 <!DOCTYPE html>
-<html lang="en-US">
-	<body>
-	...
-	</body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vincent Buchan Bookkeeping</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <header>
+    <nav>
+      <div>
+        <img src="assets/logo.png" alt="Vincent Buchan Bookkeeping" class="logo"/>
+      </div>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h1>Welcome to Vincent Buchan Bookkeeping</h1>
+      <p>Reliable, personal bookkeeping services tailored to your business needs.</p>
+    </section>
+
+    <section>
+      <h2>Our Services</h2>
+      <ul>
+        <li>General ledger maintenance</li>
+        <li>Bank reconciliations</li>
+        <li>Monthly financial reports</li>
+        <li>Accounts payable and receivable</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Contact us at <a href="mailto:Deidre.Buchan@gmail.com">Deidre.Buchan@gmail.com</a></p>
+    <p>Vincent Buchan Bookkeeping &copy; 2025</p>
+  </footer>
+
+</body>
 </html>
