--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <section>
       <h2>Meet Deidre Buchan</h2>
-      <p>Deidre has a Bachelors Degree in Mathematics from the University of Washing. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.</p>
+      <p>Deidre has a Bachelors Degree in Mathematics from the University of Washington. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.</p>
     </section>
   </main>
 
