--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
   <header>
     <nav>
-      <div>
-        <img src="assets/logo.png" alt="Vincent Buchan Bookkeeping" class="logo"/>
-      </div>
-      <div>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-      </div>
-    </nav>
+		<div class="nav-header">
+			<img src="assets/logo.png" alt="Vincent Buchan Bookkeeping" class="logo"/>
+			<button class="hamburger" onclick="toggleMenu()">☰</button>
+		</div>
+		<div class="nav-links" id="navLinks">
+			<a href="index.html">Home</a>
+			<a href="about.html">About Us</a>
+		</div>
+	</nav>
   </header>
 
   <main>
@@ -41,6 +42,11 @@
     <p>Contact us at <a href="mailto:Deidre.Buchan@gmail.com">Deidre.Buchan@gmail.com</a></p>
     <p>Vincent Buchan Bookkeeping &copy; 2025</p>
   </footer>
-
+<script>
+  function toggleMenu() {
+    const links = document.getElementById('navLinks');
+    links.classList.toggle('show');
+  }
+</script>
 </body>
 </html>
