--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   </main>
 
   <footer>
-    <p>Contact us at <a href="mailto:Deidre.Buchan@gmail.com">Deidre Buchan</a></p>
+    <p>Contact us at <a href="mailto:Deidre.Buchan@gmail.com">Deidre.Buchan@GMail.com</a></p>
     <p>Vincent Buchan Bookkeeping &copy; 2025</p>
   </footer>
 <script>
