--- a/about.html
+++ b/about.html
@@ -3,46 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us – Vincent Buchan Bookkeeping</title>
+  <title>About Us | Vincent Buchan Bookkeeping</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <header>
-    <nav>
-		<div class="nav-header">
-			<img src="assets/logo.png" alt="Vincent Buchan Bookkeeping" class="logo"/>
-			<button class="hamburger" onclick="toggleMenu()">☰</button>
-		</div>
-		<div class="nav-links" id="navLinks">
-			<a href="index.html">Home</a>
-			<a href="about.html">About Us</a>
-		</div>
-	</nav>
-  </header>
+  <div class="layout">
+    <header>
+      <nav>
+        <div class="nav-header">
+          <img src="assets/logo.png" alt="Vincent Buchan Bookkeeping" class="logo"/>
+          <button class="hamburger" onclick="toggleMenu()">☰</button>
+        </div>
+        <div class="nav-links" id="navLinks">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+        </div>
+      </nav>
+    </header>
 
-  <main>
-    <section>
-      <h1>About Vincent Buchan Bookkeeping</h1>
-      <p>Vincent Buchan Bookkeeping was founded with the goal of providing small businesses with dependable, detail-oriented bookkeeping services. With experience in finance and a personal touch, we work closely with each client to support their unique financial needs.</p>
-    </section>
-
-    <section>
-      <h2>Meet Deidre Buchan</h2>
-      <p>Deidre has a Bachelors Degree in Mathematics from the University of Washington. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.</p>
-    </section>
-  </main>
+    <main>
+      <section>
+        <h1>About Vincent Buchan Bookkeeping</h1>
+        <p>
+          At Vincent Buchan Bookkeeping, we believe that personalized service and attention to detail are key to helping your business thrive.
+        </p>
+        <p>
+          Deidre has a Bachelors Degree in Mathematics from the University of Washington. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.
+        </p>
+        <p>
+          Whether you're a sole proprietor or running a growing operation, we're here to support you with professional, affordable bookkeeping tailored to your needs.
+        </p>
+      </section>
+    </main>
+  </div>
 
   <footer>
-    <p>Contact us at <a href="mailto:Deidre.Buchan@gmail.com">Deidre.Buchan@GMail.com</a></p>
+    <p>Contact us at <a href="mailto:Deidre.Buchan@gmail.com">Deidre.Buchan@gmail.com</a></p>
     <p>Vincent Buchan Bookkeeping &copy; 2025</p>
   </footer>
-<script>
-  function toggleMenu() {
-    const links = document.getElementById('navLinks');
-    links.classList.toggle('show');
-  }
-</script>
+
+  <script>
+    function toggleMenu() {
+      const links = document.getElementById('navLinks');
+      links.classList.toggle('show');
+    }
+  </script>
 </body>
 </html>
-
