--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <section>
         <h1>Welcome to Vincent Buchan Bookkeeping</h1>
-        <p>Reliable, personal bookkeeping services tailored to your business needs.</p>
+        <p>We take the anxiety out of your books!</p>
       </section>
 
       <section>
