--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <div class="nav-header">
-          <img src="assets/logo.png" alt="Vincent Buchan Bookkeeping" class="logo"/>
+          <img src="assets/VBBK_favicon_serif.ico" alt="Vincent Buchan Bookkeeping" class="logo"/>
           <button class="hamburger" onclick="toggleMenu()">☰</button>
         </div>
         <div class="nav-links" id="navLinks">
