--- a/about.html
+++ b/about.html
@@ -29,11 +29,11 @@
         <p>
           At Vincent Buchan Bookkeeping, we believe that personalized service and attention to detail are key to helping your business thrive.
         </p>
-        <p>
-          Deidre has a Bachelors Degree in Mathematics from the University of Washington. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.
+		        <p>
+          Whether you're a sole proprietor or running a growing operation, we're here to support you with professional, affordable bookkeeping tailored to your needs.
         </p>
         <p>
-          Whether you're a sole proprietor or running a growing operation, we're here to support you with professional, affordable bookkeeping tailored to your needs.
+          Deidre Buchan has a Bachelors Degree in Mathematics from the University of Washington. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.
         </p>
       </section>
     </main>
