--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+	 <div class="content-wrapper">
       <section>
         <h1>About Vincent Buchan Bookkeeping</h1>
         <p>
@@ -36,6 +37,7 @@
           Deidre Buchan has a Bachelors Degree in Mathematics from the University of Washington. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.
         </p>
       </section>
+	 </div>
     </main>
   </div>
 
