--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+	 <div class="content-wrapper">
       <section>
         <h1>Welcome to Vincent Buchan Bookkeeping</h1>
         <p>We take the anxiety out of your books!</p>
@@ -38,6 +39,7 @@
           <li>Accounts payable and receivable</li>
         </ul>
       </section>
+	 </div>
     </main>
   </div>
 
