Add CTA & Adjust Text

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     </header>
 
     <main>
-	 <div class="content-wrapper">
-      <section>
+     <div class="main-content-area">
+      <div class="main-text-content">
+       <section>
         <h1>Welcome to Vincent Buchan Bookkeeping</h1>
         <p>We take the anxiety out of your books!</p>
-      </section>
+       </section>
 
-      <section>
+       <section>
         <h2>Our Services</h2>
         <ul>
           <li>General ledger maintenance</li>
@@ -38,8 +39,15 @@
           <li>Monthly financial reports</li>
           <li>Accounts payable and receivable</li>
         </ul>
-      </section>
-	 </div>
+       </section>
+     </div>
+
+      <aside class="cta-panel">
+       <h3>Let’s Talk!</h3>
+       <p>Have questions or ready to get started?</p>
+       <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
+      </aside>
+     </div>
     </main>
   </div>
 
