--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Learn more about us and the personalized bookkeeping services behind Vincent Buchan Bookkeeping.">
   <title>About Us | Vincent Buchan Bookkeeping</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico">
@@ -14,7 +15,7 @@
       <nav>
         <div class="nav-header">
           <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
-          <button class="hamburger" onclick="toggleMenu()">☰</button>
+          <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
         </div>
         <div class="nav-links" id="navLinks">
           <a href="index.html">Home</a>
@@ -47,10 +48,12 @@
   </footer>
 
   <script>
-    function toggleMenu() {
-      const links = document.getElementById('navLinks');
-      links.classList.toggle('show');
-    }
+   function toggleMenu() {
+    const links = document.getElementById('navLinks');
+    const button = document.querySelector('.hamburger');
+    const isOpen = links.classList.toggle('show');
+    button.setAttribute('aria-expanded', isOpen);
+   }
   </script>
 </body>
 </html>
