--- a/index.html
+++ b/index.html
@@ -10,59 +10,59 @@
 </head>
 <body>
 
-  <div class="layout">
-    <header>
-      <nav>
-        <div class="nav-header">
-          <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
-          <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
+  <div class="page-wrapper">
+    <div class="layout">
+      <header>
+        <nav>
+          <div class="nav-header">
+            <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
+            <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
+          </div>
+          <div class="nav-links" id="navLinks">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+          </div>
+        </nav>
+      </header>
+
+      <main>
+        <div class="main-content-area">
+          <div class="main-text-content">
+            <section>
+              <h1>Welcome to Vincent Buchan Bookkeeping</h1>
+              <p>We take the anxiety out of your books!</p>
+            </section>
+
+            <section>
+              <h2>Our Services</h2>
+              <ul>
+                <li>General ledger maintenance</li>
+                <li>Bank reconciliations</li>
+                <li>Monthly financial reports</li>
+                <li>Accounts payable and receivable</li>
+              </ul>
+            </section>
+          </div>
+
+          <aside class="cta-panel">
+            <h3>Let’s Talk!</h3>
+            <p>Have questions or ready to get started?</p>
+            <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
+          </aside>
         </div>
-        <div class="nav-links" id="navLinks">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-        </div>
-      </nav>
-    </header>
+      </main>
+    </div>
 
-    <main>
-     <div class="main-content-area">
-      <div class="main-text-content">
-       <section>
-        <h1>Welcome to Vincent Buchan Bookkeeping</h1>
-        <p>We take the anxiety out of your books!</p>
-       </section>
-
-       <section>
-        <h2>Our Services</h2>
-        <ul>
-          <li>General ledger maintenance</li>
-          <li>Bank reconciliations</li>
-          <li>Monthly financial reports</li>
-          <li>Accounts payable and receivable</li>
-        </ul>
-       </section>
-     </div>
-
-      <aside class="cta-panel">
-       <h3>Let’s Talk!</h3>
-       <p>Have questions or ready to get started?</p>
-       <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
-      </aside>
-     </div>
-    </main>
+    <footer>
+      <p>Vincent Buchan Bookkeeping &copy; 2025</p>
+    </footer>
   </div>
 
-  <footer>
-    <p>Vincent Buchan Bookkeeping &copy; 2025</p>
-  </footer>
-
   <script>
-   function toggleMenu() {
-    const links = document.getElementById('navLinks');
-    const button = document.querySelector('.hamburger');
-    const isOpen = links.classList.toggle('show');
-    button.setAttribute('aria-expanded', isOpen);
-   }
+    function toggleMenu() {
+      const links = document.getElementById('navLinks');
+      links.classList.toggle('show');
+    }
   </script>
 </body>
 </html>
