--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Vincent Buchan Bookkeeping helps small businesses stay organized with professional bookkeeping services.">
+  <title>Vincent Buchan Bookkeeping</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico">
+</head>
 <body>
   <div class="page-wrapper">
     
-    <header>
-      <nav>
-        <div class="nav-header">
-          <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
-          <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
-        </div>
-        <div class="nav-links" id="navLinks">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-        </div>
-      </nav>
-    </header>
-
     <div class="layout">
+      <header>
+        <nav>
+          <div class="nav-header">
+            <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
+            <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
+          </div>
+          <div class="nav-links" id="navLinks">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+          </div>
+        </nav>
+      </header>
+
       <main>
         <div class="main-content-area">
           <div class="main-text-content">
