Added How it Works section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,28 @@
           <li>Accounts payable and receivable</li>
         </ul>
        </section>
-     </div>
+	   
+	   <section class="how-it-works">
+		<div class="content-wrapper">
+		 <h2>How It Works</h2>
+		  <div class="steps">
+		  <div class="step">
+			<h3>1. Schedule a Consultation</h3>
+			<p>We’ll talk about your business, goals, and bookkeeping needs to see how we can help.</p>
+		  </div>
+		  <div class="step">
+			<h3>2. We Get to Work</h3>
+			<p>We'll handle your books with precision and care — from reconciliations to reporting.</p>
+		  </div>
+		  <div class="step">
+			<h3>3. You Stay Focused</h3>
+			<p>With your finances organized, you can get back to doing what you love — running your business.</p>
+		  </div>
+		  </div>
+		</div>
+	   </section>
+
+      </div>
 
       <aside class="cta-panel">
        <h3>Let’s Talk!</h3>
