--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
 		</div>
 	   </section>
 
-      </div>
-
-      <aside class="cta-panel">
+      <section class="cta-panel">
        <h3>Let’s Talk!</h3>
        <p>Have questions or ready to get started?</p>
        <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
-      </aside>
+      </section>
+      </div>
      </div>
     </main>
   </div>
