--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 	   </section>
 
       <section class="cta-panel">
-       <h3>Let’s Talk!</h3>
-       <p>Have questions or ready to get started?</p>
-       <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
+	    <div class="content-wrapper">
+         <h3>Let’s Talk!</h3>
+         <p>Have questions or ready to get started?</p>
+         <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
+		</div>
       </section>
       </div>
      </div>
