--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </ul>
        </section>
 	   
+	   <hr class="section-divider">
+	   
 	   <section class="how-it-works">
 		<div class="content-wrapper">
 		 <h2>How It Works</h2>
