--- a/index.html
+++ b/index.html
@@ -11,83 +11,89 @@
 </head>
 <body>
 
-  <div class="layout">
-    <header>
-      <nav>
-        <div class="nav-header">
-          <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
-          <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
-        </div>
-        <div class="nav-links" id="navLinks">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-        </div>
-      </nav>
-    </header>
+  <div class="page-wrapper">
 
-    <main>
-     <div class="main-content-area">
-      <div class="main-text-content">
-       <section>
-        <h1>Welcome to Vincent Buchan Bookkeeping</h1>
-        <p>We take the anxiety out of your books!</p>
-       </section>
+    <div class="layout">
+      <header>
+        <nav>
+          <div class="nav-header">
+            <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
+            <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
+          </div>
+          <div class="nav-links" id="navLinks">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+          </div>
+        </nav>
+      </header>
 
-       <section>
-        <h2>Our Services</h2>
-        <ul>
-          <li>General ledger maintenance</li>
-          <li>Bank reconciliations</li>
-          <li>Monthly financial reports</li>
-          <li>Accounts payable and receivable</li>
-        </ul>
-       </section>
-	   
-	   <hr class="section-divider">
-	   
-	   <section class="how-it-works">
-		<div class="content-wrapper">
-		 <h2>How It Works</h2>
-		  <div class="steps">
-		  <div class="step">
-			<h3>1. Schedule a Consultation</h3>
-			<p>We’ll talk about your business, goals, and bookkeeping needs to see how we can help.</p>
-		  </div>
-		  <div class="step">
-			<h3>2. We Get to Work</h3>
-			<p>We'll handle your books with precision and care — from reconciliations to reporting.</p>
-		  </div>
-		  <div class="step">
-			<h3>3. You Stay Focused</h3>
-			<p>With your finances organized, you can get back to doing what you love — running your business.</p>
-		  </div>
-		  </div>
-		</div>
-	   </section>
+      <main>
+        <div class="main-content-area">
+          <div class="main-text-content">
 
-      <section class="cta-panel">
-	    <div class="content-wrapper">
-         <h3>Let’s Talk!</h3>
-         <p>Have questions or ready to get started?</p>
-         <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
-		</div>
-      </section>
-      </div>
-     </div>
-    </main>
-  </div>
+            <section>
+              <h1>Welcome to Vincent Buchan Bookkeeping</h1>
+              <p>We take the anxiety out of your books!</p>
+            </section>
 
-  <footer>
-    <p>Vincent Buchan Bookkeeping &copy; 2025</p>
-  </footer>
+            <section>
+              <h2>Our Services</h2>
+              <ul>
+                <li>General ledger maintenance</li>
+                <li>Bank reconciliations</li>
+                <li>Monthly financial reports</li>
+                <li>Accounts payable and receivable</li>
+              </ul>
+            </section>
+
+            <hr class="section-divider" />
+
+            <section class="how-it-works">
+              <div class="content-wrapper">
+                <h2>How It Works</h2>
+                <div class="steps">
+                  <div class="step">
+                    <h3>1. Schedule a Consultation</h3>
+                    <p>We’ll talk about your business, goals, and bookkeeping needs to see how we can help.</p>
+                  </div>
+                  <div class="step">
+                    <h3>2. We Get to Work</h3>
+                    <p>We'll handle your books with precision and care — from reconciliations to reporting.</p>
+                  </div>
+                  <div class="step">
+                    <h3>3. You Stay Focused</h3>
+                    <p>With your finances organized, you can get back to doing what you love — running your business.</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section class="cta-panel">
+              <div class="content-wrapper">
+                <h3>Let’s Talk!</h3>
+                <p>Have questions or ready to get started?</p>
+                <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
+              </div>
+            </section>
+
+          </div> <!-- .main-text-content -->
+        </div> <!-- .main-content-area -->
+      </main>
+    </div> <!-- .layout -->
+
+    <footer>
+      <p>Vincent Buchan Bookkeeping &copy; 2025</p>
+    </footer>
+
+  </div> <!-- .page-wrapper -->
 
   <script>
-  function toggleMenu() {
-    const links = document.getElementById('navLinks');
-    const button = document.querySelector('.hamburger');
-    const isOpen = links.classList.toggle('show');
-    button.setAttribute('aria-expanded', isOpen);
-  }
-</script>
+    function toggleMenu() {
+      const links = document.getElementById('navLinks');
+      const button = document.querySelector('.hamburger');
+      const isOpen = links.classList.toggle('show');
+      button.setAttribute('aria-expanded', isOpen);
+    }
+  </script>
 </body>
 </html>
