--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Learn more about us and the personalized bookkeeping services behind Vincent Buchan Bookkeeping.">
   <title>About Us | Vincent Buchan Bookkeeping</title>
   <link rel="stylesheet" href="styles.css" />
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <div class="nav-header">
-            <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
+            <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large" />
             <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
           </div>
           <div class="nav-links" id="navLinks">
@@ -26,7 +26,7 @@
 
       <main>
         <div class="content-wrapper">
-          <section>
+          <section class="main-text-content">
             <h1>About Vincent Buchan Bookkeeping</h1>
             <p>
               At Vincent Buchan Bookkeeping, we believe that personalized service and attention to detail are key to helping your business thrive.
