--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
               <div class="content-wrapper">
                 <h3>Let’s Talk!</h3>
                 <p>Have questions or ready to get started?</p>
-                <a href="mailto:Deidre.Buchan@gmail.com" class="cta-button">Schedule a Consultation</a>
+                <span id="email"></span>
+				<script>
+					const user = "Deidre.Buchan";
+					const domain = "gmail.com";
+					const link = `mailto:${user}@${domain}`;
+					const buttonLabel = "Schedule a Consultation";
+					document.getElementById("email").innerHTML = `<a href="${link}" class="cta-button">${buttonLabel}</a>`;
+				</script>
               </div>
             </section>
 
