--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="referrer" content="no-referrer">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src https://fonts.gstatic.com;">
   <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()">
+  <meta name="google-site-verification" content="7MmUGFXZ7tirQu8ClJtYoHZKrYs_tTgMCoKITzyzzlY" />
   <title>Vincent Buchan Bookkeeping</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico">
