--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					const domain = "gmail.com";
 					const link = `mailto:${user}@${domain}`;
 					const buttonLabel = "Schedule a Consultation";
-					document.getElementById("email").innerHTML = `<a href="${link}" class="cta-button">${buttonLabel}</a>`;
+					document.getElementById("email").innerHTML = '<a href="${link}" class="cta-button">${buttonLabel}</a>';
 				</script>
               </div>
             </section>
