--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
             </section>
 
             <section class="cta-panel">
-              <div class="content-wrapper">
-                <h3>Let’s Talk!</h3>
-                <p>Have questions or ready to get started?</p>
-                <span id="email"></span>
-				<script>
-					const user = "Deidre.Buchan";
-					const domain = "gmail.com";
-					const link = `mailto:${user}@${domain}`;
-					const buttonLabel = "Schedule a Consultation";
-					document.getElementById("email").innerHTML = '<a href="${link}" class="cta-button">${buttonLabel}</a>';
-				</script>
-              </div>
-            </section>
+				      <div class="content-wrapper">
+					      <h3>Let's Talk!</h3>
+					      <p>Have questions or ready to get started?</p>
+					      <span id="email"></span>
+					      <script>
+						      const user = "Deidre.Buchan";
+						      const domain = "gmail.com";
+						      const link = "mailto:" + user + "@" + domain;
+						      const buttonLabel = "Schedule a Consultation";
+						      document.getElementById("email").innerHTML = '<a href="' + link + '" class="cta-button">' + buttonLabel + '</a>';
+					      </script>
+				      </div>
+			      </section>
 
           </div> <!-- .main-text-content -->
         </div> <!-- .main-content-area -->
