--- a/index.html
+++ b/index.html
@@ -79,13 +79,7 @@
 					      <h3>Let's Talk!</h3>
 					      <p>Have questions or ready to get started?</p>
 					      <span id="email"></span>
-					      <script>
-						      const user = "Deidre.Buchan";
-						      const domain = "gmail.com";
-						      const link = "mailto:" + user + "@" + domain;
-						      const buttonLabel = "Schedule a Consultation";
-						      document.getElementById("email").innerHTML = '<a href="' + link + '" class="cta-button">' + buttonLabel + '</a>';
-					      </script>
+					      <script src="cta.js" defer></script>
 				      </div>
 			      </section>
 
