--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					      <h3>Let's Talk!</h3>
 					      <p>Have questions or ready to get started?</p>
 					      <span id="email"></span>
-					      <script src="cta.js" defer></script>
+					      <script src="js/cta.js" defer></script>
 				      </div>
 			      </section>
 
