--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
             </section>
 
             <section class="cta-panel">
-				      <div class="content-wrapper">
-					      <h3>Let's Talk!</h3>
-					      <p>Have questions or ready to get started?</p>
-					      <span id="email"></span>
-					      <script src="js/cta.js" defer></script>
-				      </div>
-			      </section>
+			 <div class="content-wrapper">
+			   <h3>Let's Talk!</h3>
+			   <p>Have questions or ready to get started?</p>
+			   <span id="email"></span>
+			   <p class="cta-note">
+			    Not working? You can also reach us at <span id="fallback-email"></span>.
+			   </p>
+			 </div>
+			</section>
 
           </div> <!-- .main-text-content -->
         </div> <!-- .main-content-area -->
