Lightouse Accesibility Fixes
Hopefully fixing the Lighthouse h1 issue and adding improved aria nav

--- a/about.html
+++ b/about.html
@@ -19,17 +19,17 @@
   <div class="page-wrapper">
     <div class="layout">
       <header>
-        <nav>
-          <div class="nav-header">
-            <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large" />
-            <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
-          </div>
-          <div class="nav-links" id="navLinks">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-          </div>
-        </nav>
-      </header>
+  <nav aria-label="Main navigation">
+    <div class="nav-header">
+      <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large" />
+      <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
+    </div>
+    <div class="nav-links" id="navlinks">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+    </div>
+  </nav>
+</header>
 
       <main>
         <div class="content-wrapper">
@@ -50,8 +50,10 @@
     </div>
 
     <footer>
-      <p>Vincent Buchan Bookkeeping &copy; 2025</p>
-    </footer>
+  <nav aria-label="Footer navigation">
+    <p>Vincent Buchan Bookkeeping &copy; 2025</p>
+  </nav>
+</footer>
   </div>
 
   <script>
