--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
     <div class="layout">
       <header>
-        <nav>
-          <div class="nav-header">
-            <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large"/>
-            <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
-          </div>
-          <div class="nav-links" id="navLinks">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-          </div>
-        </nav>
-      </header>
+  <nav aria-label="Main navigation">
+    <div class="nav-header">
+      <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large" />
+      <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
+    </div>
+    <div class="nav-links" id="navlinks">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+    </div>
+  </nav>
+</header>
 
       <main>
         <div class="main-content-area">
@@ -91,8 +91,10 @@
     </div> <!-- .layout -->
 
     <footer>
-      <p>Vincent Buchan Bookkeeping &copy; 2025</p>
-    </footer>
+  <nav aria-label="Footer navigation">
+    <p>Vincent Buchan Bookkeeping &copy; 2025</p>
+  </nav>
+</footer>
 
   </div> <!-- .page-wrapper -->
 
