--- a/index.html
+++ b/index.html
@@ -98,13 +98,7 @@
 
   </div> <!-- .page-wrapper -->
 
-  <script>
-    function toggleMenu() {
-      const links = document.getElementById('navLinks');
-      const button = document.querySelector('.hamburger');
-      const isOpen = links.classList.toggle('show');
-      button.setAttribute('aria-expanded', isOpen);
-    }
+  <script src="js/nav.js" defer></script>
   </script>
   <script src="js/cta.js"></script>
 </body>
