--- a/about.html
+++ b/about.html
@@ -56,13 +56,6 @@
 </footer>
   </div>
 
-  <script>
-    function toggleMenu() {
-      const links = document.getElementById('navLinks');
-      const button = document.querySelector('.hamburger');
-      const isOpen = links.classList.toggle('show');
-      button.setAttribute('aria-expanded', isOpen);
-    }
-  </script>
+  <script src="js/nav.js" defer></script>
 </body>
 </html>
