--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
   <nav aria-label="Main navigation">
     <div class="nav-header">
       <img src="assets/VBBK_logo_256x256.png" alt="Vincent Buchan Bookkeeping" class="logo-large" />
-      <button class="hamburger" onclick="toggleMenu()" aria-label="Toggle navigation menu">☰</button>
+      <button class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false">☰</button>
     </div>
-    <div class="nav-links" id="navlinks">
+    <div class="nav-links" id="navLinks">
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
     </div>
