--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico">
 </head>
 <body>
+  <h1 class="visually-hidden">Vincent Buchan Bookkeeping</h1>
   <div class="page-wrapper">
     <div class="layout">
       <header>
