--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico" sizes="32x32">
 </head>
 <body>
-
+  <h1 class="visually-hidden">Vincent Buchan Bookkeeping</h1>
   <div class="page-wrapper">
 
     <div class="layout">
