--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
             <p>
               Whether you're a sole proprietor or running a growing operation, we're here to support you with professional, affordable bookkeeping tailored to your needs.
             </p>
+			<hr class="section-divider" />
             <p>
               Deidre Buchan has a Bachelors Degree in Mathematics from the University of Washington. She is passionate about numbers and helping small businesses succeed. With years of experience in financial administration and bookkeeping, she ensures every transaction is accounted for and every client feels supported.
             </p>
