--- a/about.html
+++ b/about.html
@@ -13,6 +13,12 @@
   <title>About Us | Vincent Buchan Bookkeeping</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico">
+  <meta property="og:title" content="Vincent Buchan Bookkeeping" />
+  <meta property="og:description" content="Personalized bookkeeping for small businesses." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://hackat1.github.io/" />
+  <meta property="og:image" content="https://hackat1.github.io/assets/VBBK_favicon_serif.ico" />
+  <meta property="og:site_name" content="Vincent Buchan Bookkeeping" />
 </head>
 <body>
   <h1 class="visually-hidden">Vincent Buchan Bookkeeping</h1>
