Fixing OG Meta Tags

--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico">
   <meta property="og:title" content="Vincent Buchan Bookkeeping" />
-  <meta property="og:description" content="Personalized bookkeeping for small businesses." />
+  <meta property="og:description" content="Personalized bookkeeping for individuals and small businesses in the Edmonds, Washington area." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://hackat1.github.io/" />
-  <meta property="og:image" content="https://hackat1.github.io/assets/VBBK_favicon_serif.ico" />
+  <meta property="og:image" content="https://hackat1.github.io/assets/VBBK_logo_256x256" />
   <meta property="og:site_name" content="Vincent Buchan Bookkeeping" />
 </head>
 <body>
