--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:description" content="Personalized bookkeeping for individuals and small businesses in the Edmonds, Washington area." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://hackat1.github.io/" />
-  <meta property="og:image" content="https://hackat1.github.io/assets/VBBK_logo_256x256" />
+  <meta property="og:image" content="https://hackat1.github.io/assets/VBBK_logo_256x256.png" />
   <meta property="og:site_name" content="Vincent Buchan Bookkeeping" />
 </head>
 <body>
@@ -103,7 +103,6 @@
   </div> <!-- .page-wrapper -->
 
   <script src="js/nav.js" defer></script>
-  </script>
   <script src="js/cta.js"></script>
 </body>
 </html>
