Fix Aria Reader for Nav Menu

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     </div>
     <div class="nav-links" id="navLinks">
       <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
+      <a href="about.html" aria-current="page">About Us</a>
     </div>
   </nav>
 </header>
