--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false">☰</button>
     </div>
     <div class="nav-links" id="navLinks">
-      <a href="index.html">Home</a>
+      <a href="index.html" aria-current="page">Home</a>
       <a href="about.html">About Us</a>
     </div>
   </nav>
