--- a/about.html
+++ b/about.html
@@ -14,6 +14,47 @@
   <meta name="google-site-verification" content="7MmUGFXZ7tirQu8ClJtYoHZKrYs_tTgMCoKITzyzzlY" />
   <title>About Us | Vincent Buchan Bookkeeping</title>
   <link rel="canonical" href="https://hackat1.github.io/about.html">
+  <script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@graph": [
+		{
+			"@type": "LocalBusiness",
+			"@id": "https://hackat1.github.io/#vbbk",
+			"name": "Vincent Buchan Bookkeeping",
+			"url": "https://hackat1.github.io/",
+			"image": "https://hackat1.github.io/assets/VBBK_logo_256x256.png",
+			"description": "Learn more about us and the personalized bookkeeping services behind Vincent Buchan Bookkeeping.",
+			"address": {
+				"@type": "PostalAddress",
+				"addressLocality": "Edmonds",
+				"addressRegion": "WA",
+				"addressCountry": "US"
+			},
+			"employee": [
+				{ "@id": "https://hackat1.github.io/#deidre" },
+				{ "@id": "https://hackat1.github.io/#neo" }
+			]
+		},
+		{
+			"@type": "Person",
+			"@id": "https://hackat1.github.io/#deidre",
+			"name": "Deidre (Dei) Buchan",
+			"jobTitle": "Bookkeeper",
+			"image": "https://hackat1.github.io/assets/team/deidre_buchan.jpg",
+			"worksFor": { "@id": "https://hackat1.github.io/#vbbk" }
+		},
+		{
+			"@type": "Person",
+			"@id": "https://hackat1.github.io/#neo",
+			"name": "Neo Vincent",
+			"jobTitle": "Financial Planning & Strategy",
+			"image": "https://hackat1.github.io/assets/team/neo_vincent.png",
+			"worksFor": { "@id": "https://hackat1.github.io/#vbbk" }
+		}
+	]
+}
+</script>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico">
   <meta property="og:title" content="Vincent Buchan Bookkeeping" />
