--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
   <meta name="google-site-verification" content="7MmUGFXZ7tirQu8ClJtYoHZKrYs_tTgMCoKITzyzzlY" />
   <title>Vincent Buchan Bookkeeping</title>
   <link rel="canonical" href="https://hackat1.github.io/">
+  <script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "LocalBusiness",
+		"@id": "https://hackat1.github.io/#vbbk",
+		"name": "Vincent Buchan Bookkeeping",
+		"url": "https://hackat1.github.io/",
+		"image": "https://hackat1.github.io/assets/VBBK_logo_256x256.png",
+		"description": "Personalized bookkeeping for individuals and small businesses in the Edmonds, Washington area.",
+		"address": {
+		"@type": "PostalAddress",
+		"addressLocality": "Edmonds",
+		"addressRegion": "WA",
+		"addressCountry": "US"
+  },
+  "areaServed": "Edmonds, WA and nearby"
+}
+</script>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="assets/VBBK_favicon_serif.ico" sizes="32x32">
   <meta property="og:title" content="Vincent Buchan Bookkeeping" />
