--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 		{
 			"@type": "Person",
 			"@id": "https://hackat1.github.io/#deidre",
-			"name": "Deidre (Dei) Buchan",
+			"name": "Deidre Buchan",
 			"jobTitle": "Bookkeeper",
 			"image": "https://hackat1.github.io/assets/team/deidre_buchan.jpg",
 			"worksFor": { "@id": "https://hackat1.github.io/#vbbk" }
